--- a/.github/workflows/astro-gh-pages.yml
+++ b/.github/workflows/astro-gh-pages.yml
@@ -19,7 +19,7 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:                    # <— add this block
+    env:
       RAINDROP_TOKEN: ${{ secrets.RAINDROP_TOKEN }}
       RAINDROP_COLLECTION_BOOKS_ID: ${{ secrets.RAINDROP_COLLECTION_BOOKS_ID }}
     steps:
@@ -39,6 +39,16 @@ jobs:
         run: |
           if [ -z "${RAINDROP_TOKEN}" ]; then echo "❌ RAINDROP_TOKEN missing"; exit 1; else echo "✅ RAINDROP_TOKEN present"; fi
           if [ -z "${RAINDROP_COLLECTION_BOOKS_ID}" ]; then echo "❌ RAINDROP_COLLECTION_BOOKS_ID missing"; exit 1; else echo "✅ RAINDROP_COLLECTION_BOOKS_ID present"; fi
+
+      - name: 🔎 Show homepage file CI is using
+        run: |
+          echo "---- Files in src/pages ----"
+          ls -la src/pages
+          echo "---- First 25 lines of src/pages/index.astro ----"
+          sed -n '1,25p' src/pages/index.astro || true
+
+      - name: 🧹 Clean caches
+        run: rm -rf node_modules/.astro dist .astro
 
       - name: Build
         run: npm run build
